apps/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:main@sha256:e597ba2ca4425ff40f1f677930baae1278cc1e44cea399d5f588d5ce53611910
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: openwebui-data
          mountPath: /app/backend/data
      volumes:
      - name: openwebui-data
        hostPath:
          path: /data/crypt/ai/openwebui
          type: Directory
