apps/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Open WebUI
    gethomepage.dev/group: AI
    gethomepage.dev/icon: open-webui-light.png
    gethomepage.dev/pod-selector: app=openwebui
spec:
  rules:
    - host: openwebui.khazadum.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080
    - host: ai.khazadum.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080
